OpenHome/Net/Bindings/C/Device/DvProvider.h

/**
 * @addtogroup DvInvocation
 * @ingroup Device
 * @{
 */
/**
 * Opaque handle to an (action) invocation
 */
typedef THandle DvInvocationC;
/* @} */
/**
 * @addtogroup DvProvider
 * @ingroup Device
 * @{
 */

/**
 * Opaque handle to a provider
 */
typedef THandle DvProviderC;
/**
 * Destroy a provider
 *
 * @param[in] aProvider   Handle to a provider
 */
DllExport void STDCALL DvProviderDestroy(DvProviderC aProvider);
/* @} */
/**
 * @addtogroup DvInvocation
 * @ingroup Device
 * @{
 */

/**
 * Get the version number of the service requested by the caller.
 *
 * @param[in]  aInvocation  Invocation handle.  Passed to OhNetCallbackDvInvocation.
 * @param[out] aVersion     The version number of the service the caller expects.
 */
DllExport void STDCALL DvInvocationGetVersion(DvInvocationC aInvocation, uint32_t* aVersion);
/**
 * Get the network adapter an action was invoked using.
 *
 * @param[in]  aInvocation  Invocation handle.  Passed to OhNetCallbackDvInvocation.
 * @param[out] aAdapter     The network adapter used to invoke this action.
 */
DllExport void STDCALL DvInvocationGetAdapter(DvInvocationC aInvocation, TIpAddress* aAdapter);
/**
 * Get the prefix to use on any uris to resources offered by the provider.
 *
 * (This will change depending on which network adapter was used to invoke an action.)
 *
 * @param[in]  aInvocation  Invocation handle.  Passed to OhNetCallbackDvInvocation.
 * @param[out] aPrefix      The prefix to resource uris.
 * @param[out] aLen         Length (in bytes) of aPrefix.
 */
DllExport void STDCALL DvInvocationGetResourceUriPrefix(DvInvocationC aInvocation, const char** aPrefix, uint32_t* aLen);
/**
 * Get client socket's address.
 *
 * @param[in]  aInvocation  Invocation handle.  Passed to OhNetCallbackDvInvocation.
 * @param[out] aAddress     IPv4 address in network byte order.
 * @param[out] aLen         Port [1..65535].
 */
DllExport void STDCALL DvInvocationGetClientEndpoint(DvInvocationC aInvocation, TIpAddress* aAddress, uint32_t* aPort);
/**
 * Begin reading (input arguments for) an invocation
 *
 * Must be called before the values of any input arguments are read.
 * Must be called for invocations with no input arguments.
 *
 * @param[in]  aInvocation  Invocation handle.  Passed to OhNetCallbackDvInvocation
 *
 * @return  0 on success; non-zero on error
 */
DllExport int32_t STDCALL DvInvocationReadStart(DvInvocationC aInvocation);
/**
 * Read the value of an integer input argument for an invocation
 *
 * @param[in]  aInvocation  Invocation handle.  Passed to OhNetCallbackDvInvocation
 * @param[in]  aName        Name of the parameter associated with this input argument
 * @param[out] aValue       Value of the input argument
 *
 * @return  0 on success; non-zero on error
 */
DllExport int32_t STDCALL DvInvocationReadInt(DvInvocationC aInvocation, const char* aName, int32_t* aValue);
/**
 * Read the value of an unsigned integer input argument for an invocation
 *
 * @param[in]  aInvocation  Invocation handle.  Passed to OhNetCallbackDvInvocation
 * @param[in]  aName        Name of the parameter associated with this input argument
 * @param[out] aValue       Value of the input argument
 *
 * @return  0 on success; non-zero on error
 */
DllExport int32_t STDCALL DvInvocationReadUint(DvInvocationC aInvocation, const char* aName, uint32_t* aValue);
/**
 * Read the value of a boolean input argument for an invocation
 *
 * @param[in]  aInvocation  Invocation handle.  Passed to OhNetCallbackDvInvocation
 * @param[in]  aName        Name of the parameter associated with this input argument
 * @param[out] aValue       Value of the input argument.  0 for false; non-zero for true
 *
 * @return  0 on success; non-zero on error
 */
DllExport int32_t STDCALL DvInvocationReadBool(DvInvocationC aInvocation, const char* aName, uint32_t* aValue);
/**
 * Read the value of a string input argument for an invocation
 *
 * @param[in]  aInvocation  Invocation handle.  Passed to OhNetCallbackDvInvocation
 * @param[in]  aName        Name of the parameter associated with this input argument
 * @param[out] aValue       Value of the input argument.  Ownership passes to caller.  Use OhNetFree() to destroy.
 * @param[out] aLen         Length (in bytes) of aData
 *
 * @return  0 on success; non-zero on error
 */
DllExport int32_t STDCALL DvInvocationReadStringAsBuffer(DvInvocationC aInvocation, const char* aName, char** aValue, uint32_t* aLen);
/**
 * Read the value of an integer input argument for an invocation
 *
 * @param[in]  aInvocation  Invocation handle.  Passed to OhNetCallbackDvInvocation
 * @param[in]  aName        Name of the parameter associated with this input argument
 * @param[out] aData        Value of the input argument.  Ownership passes to caller.  Use OhNetFree() to destroy.
 * @param[out] aLen         Length (in bytes) of aData
 *
 * @return  0 on success; non-zero on error
 */
DllExport int32_t STDCALL DvInvocationReadBinary(DvInvocationC aInvocation, const char* aName, uint8_t** aData, uint32_t* aLen);
/**
 * Complete reading (input arguments for) an invocation
 *
 * Must be called after the values of all input arguments are read.
 * Must be called for invocations with no input arguments.
 *
 * @param[in]  aInvocation  Invocation handle.  Passed to OhNetCallbackDvInvocation
 *
 * @return  0 on success; non-zero on error
 */
DllExport int32_t STDCALL DvInvocationReadEnd(DvInvocationC aInvocation);
/**
 * Report an error reading or writing an invocation
 *
 * Must be called if DvInvocationReadEnd() isn't reached.
 * May be called if DvInvocationWriteStart() or later have been called.
 *
 * @param[in]  aInvocation  Invocation handle.  Passed to OhNetCallbackDvInvocation
 * @param[in]  aCode        Error code
 * @param[in]  aDescription Error description
 *
 * @return  0 on success; non-zero on error
 */
DllExport int32_t STDCALL DvInvocationReportError(DvInvocationC aInvocation, uint32_t aCode, const char* aDescription);
/**
 * Begin reading (output arguments for) an invocation
 *
 * Must be called before the values of any output arguments are written.
 * Must be called for invocations with no output arguments.
 *
 * @param[in]  aInvocation  Invocation handle.  Passed to OhNetCallbackDvInvocation
 *
 * @return  0 on success; non-zero on error
 */
DllExport int32_t STDCALL DvInvocationWriteStart(DvInvocationC aInvocation);
/**
 * Set the value of an integer output argument for an invocation.
 *
 * @param[in]  aInvocation  Invocation handle.  Passed to OhNetCallbackDvInvocation
 * @param[in]  aName        Name of the parameter associated with this output argument
 * @param[out] aValue       Value of the output argument
 *
 * @return  0 on success; non-zero on error
 */
DllExport int32_t STDCALL DvInvocationWriteInt(DvInvocationC aInvocation, const char* aName, int32_t aValue);
/**
 * Set the value of an unsigned integer output argument for an invocation.
 *
 * @param[in]  aInvocation  Invocation handle.  Passed to OhNetCallbackDvInvocation
 * @param[in]  aName        Name of the parameter associated with this output argument
 * @param[out] aValue       Value of the output argument
 *
 * @return  0 on success; non-zero on error
 */
DllExport int32_t STDCALL DvInvocationWriteUint(DvInvocationC aInvocation, const char* aName, uint32_t aValue);
/**
 * Set the value of a boolean output argument for an invocation.
 *
 * @param[in]  aInvocation  Invocation handle.  Passed to OhNetCallbackDvInvocation
 * @param[in]  aName        Name of the parameter associated with this output argument
 * @param[out] aValue       Value of the output argument.  0 for false; non-zero for true
 *
 * @return  0 on success; non-zero on error
 */
DllExport int32_t STDCALL DvInvocationWriteBool(DvInvocationC aInvocation, const char* aName, uint32_t aValue);
/**
 * Prepare to write a string output argument for an invocation.
 *
 * The string content will be set by one or more calls to DvInvocationWriteString.
 * This allows for the possibility of large arguments being streamed rather than
 * requiring the memory to buffer them locally.
 *
 * @param[in]  aInvocation  Invocation handle.  Passed to OhNetCallbackDvInvocation
 * @param[in]  aName        Name of the parameter associated with this output argument
 *
 * @return  0 on success; non-zero on error
 */
DllExport int32_t STDCALL DvInvocationWriteStringStart(DvInvocationC aInvocation, const char* aName);
/**
 * Write a chunk of content for a string output argument.
 *
 * DvInvocationWriteStringStart must be called first.  This function can be called one or more times.
 *
 * @param[in]  aInvocation  Invocation handle.  Passed to OhNetCallbackDvInvocation
 * @param[in]  aValue       String (or string fragment) to be output
 *
 * @return  0 on success; non-zero on error
 */
DllExport int32_t STDCALL DvInvocationWriteString(DvInvocationC aInvocation, const char* aValue);
/**
 * Complete writing of a string output argument for an invocation.
 *
 * Must be called once for every call to DvInvocationWriteStringStart (and any subsequent
 * calls to DvInvocationWriteString).
 *
 * @param[in]  aInvocation  Invocation handle.  Passed to OhNetCallbackDvInvocation
 * @param[in]  aName        Name of the parameter associated with this output argument
 *
 * @return  0 on success; non-zero on error
 */
DllExport int32_t STDCALL DvInvocationWriteStringEnd(DvInvocationC aInvocation, const char* aName);
/**
 * Prepare to write a binary output argument for an invocation.
 *
 * The string content will be set by one or more calls to DvInvocationWriteString.
 * This allows for the possibility of large arguments being streamed rather than
 * requiring the memory to buffer them locally.
 *
 * @param[in]  aInvocation  Invocation handle.  Passed to OhNetCallbackDvInvocation
 * @param[in]  aName        Name of the parameter associated with this output argument
 *
 * @return  0 on success; non-zero on error
 */
DllExport int32_t STDCALL DvInvocationWriteBinaryStart(DvInvocationC aInvocation, const char* aName);
/**
 * Write a chunk of content for a binary output argument.
 *
 * DvInvocationWriteStringStart must be called first.  This function can be called one or more times.
 *
 * @param[in]  aInvocation  Invocation handle.  Passed to OhNetCallbackDvInvocation
 * @param[in]  aData        Data (or data fragment) to be output
 * @param[in]  aLen         Length (in bytes) of aData
 *
 * @return  0 on success; non-zero on error
 */
DllExport int32_t STDCALL DvInvocationWriteBinary(DvInvocationC aInvocation, const uint8_t* aData, uint32_t aLen);
/**
 * Complete writing of a binary output argument for an invocation.
 *
 * Must be called once for every call to DvInvocationWriteStringStart (and any subsequent
 * calls to DvInvocationWriteString).
 *
 * @param[in]  aInvocation  Invocation handle.  Passed to OhNetCallbackDvInvocation
 * @param[in]  aName        Name of the parameter associated with this output argument
 *
 * @return  0 on success; non-zero on error
 */
DllExport int32_t STDCALL DvInvocationWriteBinaryEnd(DvInvocationC aInvocation, const char* aName);
/**
 * Complete writing (output arguments for) an invocation
 *
 * Must be called after the values of all output arguments are written.
 * Must be called for invocations with no output arguments.
 *
 * @param[in]  aInvocation  Invocation handle.  Passed to OhNetCallbackDvInvocation
 *
 * @return  0 on success; non-zero on error
 */
DllExport int32_t STDCALL DvInvocationWriteEnd(DvInvocationC aInvocation);