OpenHome/Net/Bindings/Cs/Device/DvProvider.cs


        /// <summary>
        /// Must be called by each sub-class, preferably from their Dispose() method
        /// </summary>
        protected bool DisposeProvider()
        {
            lock (this)
            {
                if (iHandle == IntPtr.Zero)
                    return false;
                DvProviderDestroy(iHandle);
                iHandle = IntPtr.Zero;
            }
            // don't Dispose contents of iActions - the underlying native provider handles this
            for (int i = 0; i < iProperties.Count; i++)
                iProperties[i].Dispose();
            return true;
        }
    }

    public interface IDvInvocation
    {
        /// <summary>
        /// Get the version number of the service requested by the caller.
        /// </summary>
        /// <returns>The version number of the service the caller expects.</returns>
        uint Version();
        /// <summary>
        /// Get the network adapter an action was invoked using.
        /// </summary>
        /// <returns>The network adapter used to invoke this action.</returns>
        uint Adapter();
        /// <summary>
        /// Get the prefix to use on any uris to resources offered by the provider.
        /// </summary>
        /// <returns>The prefix to resource uris.</returns>
        string ResourceUriPrefix();
        /// <summary>
        /// Get the endpoint of the client.
        /// </summary>
        /// <param name="aAddress">IPv4 address in network byte order</param>
        /// <param name="aPort">Client's port [1..65535]</param>
        void GetClientEndpoint(out uint aAddress, out uint aPort);
    }

    /// <summary>
    /// Utility class used by providers to read input and write output arguments
    /// </summary>
    /// <remarks>Only intended for use by auto-generated providers</remarks>
    public class DvInvocation : IDvInvocation
    {
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern unsafe void DvInvocationGetVersion(IntPtr aInvocation, uint* aVersion);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern unsafe void DvInvocationGetAdapter(IntPtr aInvocation, uint* aAdapter);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern unsafe void DvInvocationGetResourceUriPrefix(IntPtr aInvocation, IntPtr* aPrefix, uint* aLen);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern unsafe void DvInvocationGetClientEndpoint(IntPtr aInvocation, uint* aAddress, uint* aPort);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern int DvInvocationReadStart(IntPtr aInvocation);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern unsafe int DvInvocationReadInt(IntPtr aInvocation, IntPtr aName, int* aValue);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern unsafe int DvInvocationReadUint(IntPtr aInvocation, IntPtr aName, uint* aValue);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern unsafe int DvInvocationReadBool(IntPtr aInvocation, IntPtr aName, uint* aValue);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern unsafe int DvInvocationReadStringAsBuffer(IntPtr aInvocation, IntPtr aName, IntPtr* aValue, uint* aLen);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern unsafe int DvInvocationReadBinary(IntPtr aInvocation, IntPtr aName, IntPtr* aData, uint* aLen);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern int DvInvocationReadEnd(IntPtr aInvocation);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern unsafe int DvInvocationReportError(IntPtr aInvocation, uint aCode, IntPtr aDescription);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern int DvInvocationWriteStart(IntPtr aInvocation);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern unsafe int DvInvocationWriteInt(IntPtr aInvocation, IntPtr aName, int aValue);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern unsafe int DvInvocationWriteUint(IntPtr aInvocation, IntPtr aName, uint aValue);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern unsafe int DvInvocationWriteBool(IntPtr aInvocation, IntPtr aName, uint aValue);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern unsafe int DvInvocationWriteStringStart(IntPtr aInvocation, IntPtr aName);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern unsafe int DvInvocationWriteString(IntPtr aInvocation, IntPtr aValue);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern unsafe int DvInvocationWriteStringEnd(IntPtr aInvocation, IntPtr aName);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern unsafe int DvInvocationWriteBinaryStart(IntPtr aInvocation, IntPtr aName);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern unsafe int DvInvocationWriteBinary(IntPtr aInvocation, byte* aData, uint aLen);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern unsafe int DvInvocationWriteBinaryEnd(IntPtr aInvocation, IntPtr aName);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern int DvInvocationWriteEnd(IntPtr aInvocation);
#if IOS
        [DllImport("__Internal")]
#else
        [DllImport("ohNet")]
#endif
        static extern unsafe void OhNetFree(IntPtr aPtr);

        protected IntPtr iHandle;
        
        /// <summary>
        /// Constructor
        /// </summary>
        /// <param name="aHandle">'aInvocation' argument to ActionDelegate</param>
        public DvInvocation(IntPtr aHandle)
        {
            iHandle = aHandle;
        }
        /// <summary>
        /// Get the version number of the service requested by the caller.
        /// </summary>
        /// <returns>The version number of the service the caller expects.</returns>
        public unsafe uint Version()
        {
            uint version;
            DvInvocationGetVersion(iHandle, &version);
            return version;
        }
        /// <summary>
        /// Get the network adapter an action was invoked using.
        /// </summary>
        /// <returns>The network adapter used to invoke this action.</returns>
        public unsafe uint Adapter()
        {
            uint adapter;
            DvInvocationGetAdapter(iHandle, &adapter);
            return adapter;
        }
        /// <summary>
        /// Get the prefix to use on any uris to resources offered by the provider.
        /// </summary>
        /// <returns>The prefix to resource uris.</returns>
        public unsafe string ResourceUriPrefix()
        {
            IntPtr cPrefix;
            uint len;
            DvInvocationGetResourceUriPrefix(iHandle, &cPrefix, &len);
            String prefix = InteropUtils.PtrToStringUtf8(cPrefix, len);
            return prefix;
        }
        /// <summary>
        /// Get the endpoint of the client.
        /// </summary>
        /// <param name="aAddress">IPv4 address in network byte order</param>
        /// <param name="aPort">Client's port [1..65535]</param>
        public unsafe void GetClientEndpoint(out uint aAddress, out uint aPort)
        {
            uint address, port;
            DvInvocationGetClientEndpoint(iHandle, &address, &port);
            aAddress = address;
            aPort = port;
        }
        /// <summary>
        /// Begin reading (input arguments for) an invocation
        /// </summary>
        /// <remarks>Must be called before the values of any input arguments are read.
        /// Must be called for invocations with no input arguments.</remarks>
        public void ReadStart()
        {
            CheckError(DvInvocationReadStart(iHandle));
        }
        /// <summary>
        /// Read the value of an integer input argument for an invocation
        /// </summary>
        /// <param name="aName">Name of the parameter associated with this input argument</param>
        /// <returns>Value of the input argument</returns>
        public unsafe int ReadInt(String aName)
        {
            IntPtr name = InteropUtils.StringToHGlobalUtf8(aName);
            int val;
            int err = DvInvocationReadInt(iHandle, name, &val);
            Marshal.FreeHGlobal(name);
            CheckError(err);
            return val;
        }
        /// <summary>
        /// Read the value of an unsigned integer input argument for an invocation
        /// </summary>
        /// <param name="aName">Name of the parameter associated with this input argument</param>
        /// <returns>Value of the input argument</returns>
        public unsafe uint ReadUint(String aName)
        {
            IntPtr name = InteropUtils.StringToHGlobalUtf8(aName);
            uint val;
            int err = DvInvocationReadUint(iHandle, name, &val);
            Marshal.FreeHGlobal(name);
            CheckError(err);
            return val;
        }
        /// <summary>
        /// Read the value of a boolean input argument for an invocation
        /// </summary>
        /// <param name="aName">Name of the parameter associated with this input argument</param>
        /// <returns>Value of the input argument</returns>
        public unsafe bool ReadBool(String aName)
        {
            IntPtr name = InteropUtils.StringToHGlobalUtf8(aName);
            uint val;
            int err = DvInvocationReadBool(iHandle, name, &val);
            Marshal.FreeHGlobal(name);
            CheckError(err);
            return (val != 0);
        }
        /// <summary>
        /// Read the value of a string input argument for an invocation
        /// </summary>
        /// <param name="aName">Name of the parameter associated with this input argument</param>
        /// <returns>Value of the input argument</returns>
        public unsafe String ReadString(String aName)
        {
            IntPtr name = InteropUtils.StringToHGlobalUtf8(aName);
            IntPtr ptr;
            uint len;
            int err = DvInvocationReadStringAsBuffer(iHandle, name, &ptr, &len);
            Marshal.FreeHGlobal(name);
            String str = InteropUtils.PtrToStringUtf8(ptr, len);
            OhNetFree(ptr);
            CheckError(err);
            return str;
        }
        /// <summary>
        /// Read the value of a binary input argument for an invocation
        /// </summary>
        /// <param name="aName">Name of the parameter associated with this input argument</param>
        /// <returns>Value of the input argument</returns>
        public unsafe byte[] ReadBinary(String aName)
        {
            IntPtr name = InteropUtils.StringToHGlobalUtf8(aName);
            IntPtr data;
            uint len;
            int err = DvInvocationReadBinary(iHandle, name, &data, &len);
            Marshal.FreeHGlobal(name);
